--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 yelp.base_url=https://api.yelp.com/v3/
-yelp.key=[EXTERNAL_CONFIGURATION]
-spring.cloud.gcp.project-id=[EXTERNAL_CONFIGURATION]
+yelp.key=[external]
 spring.cloud.gcp.credentials.location=classpath:key.json
